# School-Management-System

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  class.cpp
include/: class.h  menu.h  query_system.h  school.h  school_factory.h  student.h
src/: main.cpp  menu.cpp  query_system.cpp  school.cpp  school_factory.cpp  student.cpp
